@@ -3,7 +3,7 @@
  * guts/COPYRIGHT for information.
  *
  * static int
- * wrap_execve(const char *filename, char *const *argv, char *const *envp) {
+ * wrap_execve(const char *file, char *const *argv, char *const *envp) {
  *	int rc = -1;
  */
 	char * const *new_environ;
@@ -13,7 +13,7 @@
 	 * <CHROOT>/bin/sh.  This allows use of basic utilities.  This
 	 * design will likely be revisited.
 	 */
-	pseudo_client_op(OP_EXEC, PSA_EXEC, -1, -1, filename, 0);
+	pseudo_client_op(OP_EXEC, PSA_EXEC, -1, -1, file, 0);
 	if (!pseudo_get_value("PSEUDO_RELOADED"))
 		new_environ = pseudo_setupenvp(envp);
 	else {
@@ -25,7 +25,7 @@
 	 * not much we can do about that.
 	 */
 	sigprocmask(SIG_SETMASK, &pseudo_saved_sigmask, NULL);
-	rc = real_execve(filename, argv, new_environ);
+	rc = real_execve(file, argv, new_environ);
 
 /*	return rc;
  * }
